# scumsim

./: Cargo.toml  README.md
src/: components.rs  entities.rs  lib.rs  main.rs  resources.rs  systems.rs
src/components/: actions.rs  attributes.rs
