[package]
name = "scumsim"
version = "0.1.0"
authors = ["benferreri <benferreri@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", features = ["specs-derive"] }
derive_display_from_debug = "0.1.2"
log = "0.4.11"
env_logger = "0.8.2"
